// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser parseDeviceResponse should decoded protected headers 1`] = `
Map {
  1 => -7,
  4 => "demo-kid",
  33 => Uint8Array [
    48,
    130,
    2,
    10,
    48,
    130,
    1,
    175,
    160,
    3,
    2,
    1,
    2,
    2,
    20,
    96,
    250,
    51,
    172,
    187,
    223,
    236,
    252,
    193,
    112,
    249,
    191,
    39,
    42,
    135,
    172,
    221,
    156,
    220,
    114,
    48,
    10,
    6,
    8,
    42,
    134,
    72,
    206,
    61,
    4,
    3,
    2,
    48,
    100,
    49,
    11,
    48,
    9,
    6,
    3,
    85,
    4,
    6,
    19,
    2,
    85,
    83,
    49,
    19,
    48,
    17,
    6,
    3,
    85,
    4,
    8,
    12,
    10,
    67,
    97,
    108,
    105,
    102,
    111,
    114,
    110,
    105,
    97,
    49,
    22,
    48,
    20,
    6,
    3,
    85,
    4,
    7,
    12,
    13,
    83,
    97,
    110,
    32,
    70,
    114,
    97,
    110,
    99,
    105,
    115,
    99,
    111,
    49,
    19,
    48,
    17,
    6,
    3,
    85,
    4,
    10,
    12,
    10,
    77,
    121,
    32,
    67,
    111,
    109,
    112,
    97,
    110,
    121,
    49,
    19,
    48,
    17,
    6,
    3,
    85,
    4,
    3,
    12,
    10,
    109,
    121,
    115,
    105,
    116,
    101,
    46,
    99,
    111,
    109,
    48,
    30,
    23,
    13,
    50,
    51,
    48,
    56,
    50,
    52,
    49,
    51,
    48,
    56,
    53,
    52,
    90,
    23,
    13,
    50,
    51,
    48,
    57,
    48,
    51,
    49,
    51,
    48,
    56,
    53,
    52,
    90,
    48,
    100,
    49,
    11,
    48,
    9,
    6,
    3,
    85,
    4,
    6,
    19,
    2,
    85,
    83,
    49,
    19,
    48,
    17,
    6,
    3,
    85,
    4,
    8,
    12,
    10,
    67,
    97,
    108,
    105,
    102,
    111,
    114,
    110,
    105,
    97,
    49,
    22,
    48,
    20,
    6,
    3,
    85,
    4,
    7,
    12,
    13,
    83,
    97,
    110,
    32,
    70,
    114,
    97,
    110,
    99,
    105,
    115,
    99,
    111,
    49,
    19,
    48,
    17,
    6,
    3,
    85,
    4,
    10,
    12,
    10,
    77,
    121,
    32,
    67,
    111,
    109,
    112,
    97,
    110,
    121,
    49,
    19,
    48,
    17,
    6,
    3,
    85,
    4,
    3,
    12,
    10,
    109,
    121,
    115,
    105,
    116,
    101,
    46,
    99,
    111,
    109,
    48,
    89,
    48,
    19,
    6,
    7,
    42,
    134,
    72,
    206,
    61,
    2,
    1,
    6,
    8,
    42,
    134,
    72,
    206,
    61,
    3,
    1,
    7,
    3,
    66,
    0,
    4,
    201,
    133,
    59,
    101,
    204,
    183,
    46,
    88,
    237,
    248,
    116,
    49,
    7,
    129,
    19,
    195,
    153,
    55,
    167,
    246,
    101,
    29,
    55,
    218,
    144,
    180,
    188,
    216,
    20,
    136,
    60,
    115,
    33,
    87,
    4,
    75,
    243,
    96,
    54,
    88,
    249,
    103,
    93,
    149,
    134,
    18,
    29,
    127,
    79,
    187,
    193,
    196,
    111,
    163,
    212,
    3,
    218,
    214,
    166,
    91,
    6,
    42,
    13,
    187,
    163,
    63,
    48,
    61,
    48,
    59,
    6,
    3,
    85,
    29,
    17,
    4,
    52,
    48,
    50,
    134,
    48,
    104,
    116,
    116,
    112,
    115,
    58,
    47,
    47,
    99,
    114,
    101,
    100,
    101,
    110,
    116,
    105,
    97,
    108,
    45,
    105,
    115,
    115,
    117,
    101,
    114,
    46,
    111,
    105,
    100,
    99,
    45,
    102,
    101,
    100,
    101,
    114,
    97,
    116,
    105,
    111,
    110,
    46,
    111,
    110,
    108,
    105,
    110,
    101,
    48,
    10,
    6,
    8,
    42,
    134,
    72,
    206,
    61,
    4,
    3,
    2,
    3,
    73,
    0,
    48,
    70,
    2,
    33,
    0,
    166,
    210,
    226,
    139,
    114,
    125,
    153,
    196,
    247,
    105,
    190,
    83,
    7,
    9,
    99,
    50,
    166,
    122,
    246,
    11,
    183,
    9,
    62,
    57,
    213,
    225,
    23,
    13,
    20,
    76,
    221,
    119,
    2,
    33,
    0,
    163,
    163,
    60,
    209,
    54,
    26,
    198,
    19,
    253,
    133,
    157,
    245,
    200,
    61,
    235,
    140,
    84,
    194,
    177,
    35,
    173,
    21,
    131,
    110,
    166,
    199,
    227,
    186,
    80,
    120,
    28,
    188,
  ],
}
`;

exports[`parser parseDeviceResponse should match the snapshot 1`] = `
[
  {
    "deviceSigned": undefined,
    "docType": "eu.europa.ec.eudiw.pid.1",
    "issuerSigned": {
      "issuerAuth": CoseSign1 {
        "payload": Uint8Array [
          166,
          103,
          118,
          101,
          114,
          115,
          105,
          111,
          110,
          99,
          49,
          46,
          48,
          111,
          100,
          105,
          103,
          101,
          115,
          116,
          65,
          108,
          103,
          111,
          114,
          105,
          116,
          104,
          109,
          102,
          115,
          104,
          97,
          50,
          53,
          54,
          108,
          118,
          97,
          108,
          117,
          101,
          68,
          105,
          103,
          101,
          115,
          116,
          115,
          162,
          120,
          24,
          101,
          117,
          46,
          101,
          117,
          114,
          111,
          112,
          97,
          46,
          101,
          99,
          46,
          101,
          117,
          100,
          105,
          119,
          46,
          112,
          105,
          100,
          46,
          49,
          165,
          0,
          88,
          32,
          180,
          119,
          149,
          94,
          152,
          192,
          136,
          47,
          190,
          227,
          254,
          48,
          255,
          141,
          197,
          17,
          40,
          182,
          190,
          223,
          226,
          102,
          177,
          10,
          222,
          8,
          228,
          249,
          177,
          195,
          26,
          57,
          1,
          88,
          32,
          151,
          39,
          59,
          229,
          251,
          170,
          26,
          34,
          177,
          128,
          151,
          123,
          205,
          58,
          178,
          193,
          174,
          210,
          68,
          93,
          200,
          201,
          237,
          185,
          28,
          245,
          87,
          205,
          126,
          33,
          63,
          21,
          2,
          88,
          32,
          104,
          160,
          106,
          116,
          223,
          24,
          151,
          101,
          196,
          46,
          131,
          137,
          53,
          44,
          57,
          94,
          161,
          46,
          57,
          21,
          116,
          114,
          6,
          231,
          182,
          175,
          175,
          129,
          37,
          160,
          4,
          49,
          3,
          88,
          32,
          57,
          162,
          80,
          15,
          31,
          94,
          57,
          151,
          41,
          133,
          146,
          158,
          209,
          124,
          193,
          25,
          109,
          53,
          137,
          74,
          217,
          50,
          0,
          239,
          19,
          112,
          71,
          40,
          88,
          9,
          207,
          19,
          4,
          88,
          32,
          94,
          79,
          235,
          253,
          156,
          125,
          108,
          53,
          145,
          108,
          101,
          72,
          211,
          129,
          192,
          238,
          55,
          171,
          253,
          165,
          18,
          142,
          62,
          8,
          194,
          20,
          103,
          55,
          155,
          109,
          139,
          68,
          120,
          27,
          101,
          117,
          46,
          101,
          117,
          114,
          111,
          112,
          97,
          46,
          101,
          99,
          46,
          101,
          117,
          100,
          105,
          119,
          46,
          112,
          105,
          100,
          46,
          105,
          116,
          46,
          49,
          161,
          5,
          88,
          32,
          112,
          150,
          244,
          49,
          25,
          84,
          200,
          60,
          164,
          214,
          49,
          115,
          67,
          68,
          254,
          176,
          19,
          13,
          243,
          172,
          37,
          70,
          199,
          8,
          145,
          187,
          239,
          151,
          212,
          227,
          140,
          110,
          109,
          100,
          101,
          118,
          105,
          99,
          101,
          75,
          101,
          121,
          73,
          110,
          102,
          111,
          161,
          105,
          100,
          101,
          118,
          105,
          99,
          101,
          75,
          101,
          121,
          246,
          103,
          100,
          111,
          99,
          84,
          121,
          112,
          101,
          120,
          24,
          101,
          117,
          46,
          101,
          117,
          114,
          111,
          112,
          97,
          46,
          101,
          99,
          46,
          101,
          117,
          100,
          105,
          119,
          46,
          112,
          105,
          100,
          46,
          49,
          108,
          118,
          97,
          108,
          105,
          100,
          105,
          116,
          121,
          73,
          110,
          102,
          111,
          163,
          102,
          115,
          105,
          103,
          110,
          101,
          100,
          86,
          192,
          116,
          50,
          48,
          50,
          51,
          45,
          48,
          56,
          45,
          50,
          52,
          84,
          49,
          51,
          58,
          48,
          56,
          58,
          53,
          52,
          90,
          105,
          118,
          97,
          108,
          105,
          100,
          70,
          114,
          111,
          109,
          86,
          192,
          116,
          50,
          48,
          50,
          51,
          45,
          48,
          56,
          45,
          50,
          52,
          84,
          49,
          51,
          58,
          48,
          56,
          58,
          53,
          52,
          90,
          106,
          118,
          97,
          108,
          105,
          100,
          85,
          110,
          116,
          105,
          108,
          86,
          192,
          116,
          50,
          48,
          50,
          56,
          45,
          48,
          56,
          45,
          50,
          50,
          84,
          49,
          51,
          58,
          48,
          56,
          58,
          53,
          52,
          90,
        ],
        "protectedHeaders": Uint8Array [
          163,
          1,
          38,
          4,
          72,
          100,
          101,
          109,
          111,
          45,
          107,
          105,
          100,
          24,
          33,
          89,
          2,
          14,
          48,
          130,
          2,
          10,
          48,
          130,
          1,
          175,
          160,
          3,
          2,
          1,
          2,
          2,
          20,
          96,
          250,
          51,
          172,
          187,
          223,
          236,
          252,
          193,
          112,
          249,
          191,
          39,
          42,
          135,
          172,
          221,
          156,
          220,
          114,
          48,
          10,
          6,
          8,
          42,
          134,
          72,
          206,
          61,
          4,
          3,
          2,
          48,
          100,
          49,
          11,
          48,
          9,
          6,
          3,
          85,
          4,
          6,
          19,
          2,
          85,
          83,
          49,
          19,
          48,
          17,
          6,
          3,
          85,
          4,
          8,
          12,
          10,
          67,
          97,
          108,
          105,
          102,
          111,
          114,
          110,
          105,
          97,
          49,
          22,
          48,
          20,
          6,
          3,
          85,
          4,
          7,
          12,
          13,
          83,
          97,
          110,
          32,
          70,
          114,
          97,
          110,
          99,
          105,
          115,
          99,
          111,
          49,
          19,
          48,
          17,
          6,
          3,
          85,
          4,
          10,
          12,
          10,
          77,
          121,
          32,
          67,
          111,
          109,
          112,
          97,
          110,
          121,
          49,
          19,
          48,
          17,
          6,
          3,
          85,
          4,
          3,
          12,
          10,
          109,
          121,
          115,
          105,
          116,
          101,
          46,
          99,
          111,
          109,
          48,
          30,
          23,
          13,
          50,
          51,
          48,
          56,
          50,
          52,
          49,
          51,
          48,
          56,
          53,
          52,
          90,
          23,
          13,
          50,
          51,
          48,
          57,
          48,
          51,
          49,
          51,
          48,
          56,
          53,
          52,
          90,
          48,
          100,
          49,
          11,
          48,
          9,
          6,
          3,
          85,
          4,
          6,
          19,
          2,
          85,
          83,
          49,
          19,
          48,
          17,
          6,
          3,
          85,
          4,
          8,
          12,
          10,
          67,
          97,
          108,
          105,
          102,
          111,
          114,
          110,
          105,
          97,
          49,
          22,
          48,
          20,
          6,
          3,
          85,
          4,
          7,
          12,
          13,
          83,
          97,
          110,
          32,
          70,
          114,
          97,
          110,
          99,
          105,
          115,
          99,
          111,
          49,
          19,
          48,
          17,
          6,
          3,
          85,
          4,
          10,
          12,
          10,
          77,
          121,
          32,
          67,
          111,
          109,
          112,
          97,
          110,
          121,
          49,
          19,
          48,
          17,
          6,
          3,
          85,
          4,
          3,
          12,
          10,
          109,
          121,
          115,
          105,
          116,
          101,
          46,
          99,
          111,
          109,
          48,
          89,
          48,
          19,
          6,
          7,
          42,
          134,
          72,
          206,
          61,
          2,
          1,
          6,
          8,
          42,
          134,
          72,
          206,
          61,
          3,
          1,
          7,
          3,
          66,
          0,
          4,
          201,
          133,
          59,
          101,
          204,
          183,
          46,
          88,
          237,
          248,
          116,
          49,
          7,
          129,
          19,
          195,
          153,
          55,
          167,
          246,
          101,
          29,
          55,
          218,
          144,
          180,
          188,
          216,
          20,
          136,
          60,
          115,
          33,
          87,
          4,
          75,
          243,
          96,
          54,
          88,
          249,
          103,
          93,
          149,
          134,
          18,
          29,
          127,
          79,
          187,
          193,
          196,
          111,
          163,
          212,
          3,
          218,
          214,
          166,
          91,
          6,
          42,
          13,
          187,
          163,
          63,
          48,
          61,
          48,
          59,
          6,
          3,
          85,
          29,
          17,
          4,
          52,
          48,
          50,
          134,
          48,
          104,
          116,
          116,
          112,
          115,
          58,
          47,
          47,
          99,
          114,
          101,
          100,
          101,
          110,
          116,
          105,
          97,
          108,
          45,
          105,
          115,
          115,
          117,
          101,
          114,
          46,
          111,
          105,
          100,
          99,
          45,
          102,
          101,
          100,
          101,
          114,
          97,
          116,
          105,
          111,
          110,
          46,
          111,
          110,
          108,
          105,
          110,
          101,
          48,
          10,
          6,
          8,
          42,
          134,
          72,
          206,
          61,
          4,
          3,
          2,
          3,
          73,
          0,
          48,
          70,
          2,
          33,
          0,
          166,
          210,
          226,
          139,
          114,
          125,
          153,
          196,
          247,
          105,
          190,
          83,
          7,
          9,
          99,
          50,
          166,
          122,
          246,
          11,
          183,
          9,
          62,
          57,
          213,
          225,
          23,
          13,
          20,
          76,
          221,
          119,
          2,
          33,
          0,
          163,
          163,
          60,
          209,
          54,
          26,
          198,
          19,
          253,
          133,
          157,
          245,
          200,
          61,
          235,
          140,
          84,
          194,
          177,
          35,
          173,
          21,
          131,
          110,
          166,
          199,
          227,
          186,
          80,
          120,
          28,
          188,
        ],
        "signature": Uint8Array [
          90,
          229,
          13,
          253,
          51,
          120,
          21,
          114,
          9,
          212,
          7,
          167,
          26,
          89,
          105,
          236,
          152,
          147,
          94,
          33,
          219,
          175,
          47,
          111,
          0,
          238,
          233,
          50,
          102,
          236,
          207,
          240,
          30,
          78,
          173,
          161,
          17,
          155,
          30,
          66,
          91,
          140,
          245,
          164,
          214,
          11,
          221,
          22,
          142,
          68,
          35,
          93,
          216,
          19,
          227,
          160,
          120,
          181,
          101,
          216,
          122,
          79,
          124,
          255,
        ],
        "unprotectedHeaders": {
          "33": Uint8Array [
            48,
            130,
            2,
            9,
            48,
            130,
            1,
            175,
            160,
            3,
            2,
            1,
            2,
            2,
            20,
            21,
            67,
            148,
            17,
            182,
            16,
            9,
            199,
            34,
            223,
            158,
            6,
            75,
            78,
            96,
            189,
            156,
            247,
            112,
            128,
            48,
            10,
            6,
            8,
            42,
            134,
            72,
            206,
            61,
            4,
            3,
            2,
            48,
            100,
            49,
            11,
            48,
            9,
            6,
            3,
            85,
            4,
            6,
            19,
            2,
            85,
            83,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            8,
            12,
            10,
            67,
            97,
            108,
            105,
            102,
            111,
            114,
            110,
            105,
            97,
            49,
            22,
            48,
            20,
            6,
            3,
            85,
            4,
            7,
            12,
            13,
            83,
            97,
            110,
            32,
            70,
            114,
            97,
            110,
            99,
            105,
            115,
            99,
            111,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            10,
            12,
            10,
            77,
            121,
            32,
            67,
            111,
            109,
            112,
            97,
            110,
            121,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            3,
            12,
            10,
            109,
            121,
            115,
            105,
            116,
            101,
            46,
            99,
            111,
            109,
            48,
            30,
            23,
            13,
            50,
            51,
            48,
            56,
            50,
            52,
            49,
            51,
            48,
            56,
            53,
            52,
            90,
            23,
            13,
            50,
            51,
            48,
            57,
            48,
            51,
            49,
            51,
            48,
            56,
            53,
            52,
            90,
            48,
            100,
            49,
            11,
            48,
            9,
            6,
            3,
            85,
            4,
            6,
            19,
            2,
            85,
            83,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            8,
            12,
            10,
            67,
            97,
            108,
            105,
            102,
            111,
            114,
            110,
            105,
            97,
            49,
            22,
            48,
            20,
            6,
            3,
            85,
            4,
            7,
            12,
            13,
            83,
            97,
            110,
            32,
            70,
            114,
            97,
            110,
            99,
            105,
            115,
            99,
            111,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            10,
            12,
            10,
            77,
            121,
            32,
            67,
            111,
            109,
            112,
            97,
            110,
            121,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            3,
            12,
            10,
            109,
            121,
            115,
            105,
            116,
            101,
            46,
            99,
            111,
            109,
            48,
            89,
            48,
            19,
            6,
            7,
            42,
            134,
            72,
            206,
            61,
            2,
            1,
            6,
            8,
            42,
            134,
            72,
            206,
            61,
            3,
            1,
            7,
            3,
            66,
            0,
            4,
            201,
            133,
            59,
            101,
            204,
            183,
            46,
            88,
            237,
            248,
            116,
            49,
            7,
            129,
            19,
            195,
            153,
            55,
            167,
            246,
            101,
            29,
            55,
            218,
            144,
            180,
            188,
            216,
            20,
            136,
            60,
            115,
            33,
            87,
            4,
            75,
            243,
            96,
            54,
            88,
            249,
            103,
            93,
            149,
            134,
            18,
            29,
            127,
            79,
            187,
            193,
            196,
            111,
            163,
            212,
            3,
            218,
            214,
            166,
            91,
            6,
            42,
            13,
            187,
            163,
            63,
            48,
            61,
            48,
            59,
            6,
            3,
            85,
            29,
            17,
            4,
            52,
            48,
            50,
            134,
            48,
            104,
            116,
            116,
            112,
            115,
            58,
            47,
            47,
            99,
            114,
            101,
            100,
            101,
            110,
            116,
            105,
            97,
            108,
            45,
            105,
            115,
            115,
            117,
            101,
            114,
            46,
            111,
            105,
            100,
            99,
            45,
            102,
            101,
            100,
            101,
            114,
            97,
            116,
            105,
            111,
            110,
            46,
            111,
            110,
            108,
            105,
            110,
            101,
            48,
            10,
            6,
            8,
            42,
            134,
            72,
            206,
            61,
            4,
            3,
            2,
            3,
            72,
            0,
            48,
            69,
            2,
            32,
            65,
            215,
            149,
            251,
            194,
            232,
            169,
            235,
            140,
            6,
            100,
            252,
            90,
            193,
            192,
            55,
            37,
            212,
            32,
            155,
            239,
            6,
            21,
            151,
            250,
            93,
            112,
            176,
            218,
            64,
            58,
            235,
            2,
            33,
            0,
            214,
            35,
            29,
            203,
            171,
            136,
            217,
            153,
            212,
            250,
            205,
            31,
            140,
            219,
            179,
            30,
            126,
            105,
            222,
            165,
            153,
            201,
            58,
            174,
            237,
            182,
            15,
            20,
            225,
            82,
            210,
            192,
          ],
        },
      },
      "nameSpaces": {
        "eu.europa.ec.eudiw.pid.1": [
          {
            "0": {
              "digestID": 0,
              "elementIdentifier": "birth_date",
              "elementValue": 1922-03-13T00:00:00.000Z,
              "random": {
                "data": [
                  193,
                  157,
                  192,
                  252,
                  171,
                  44,
                  7,
                  177,
                  180,
                  149,
                  34,
                  109,
                  46,
                  173,
                  46,
                  35,
                  154,
                  236,
                  168,
                  115,
                  156,
                  10,
                  108,
                  84,
                  115,
                  221,
                  87,
                  59,
                  69,
                  25,
                  85,
                  97,
                ],
                "type": "Buffer",
              },
            },
          },
          {
            "1": {
              "digestID": 1,
              "elementIdentifier": "given_name",
              "elementValue": "Mascetti",
              "random": Uint8Array [
                179,
                49,
                122,
                21,
                192,
                247,
                196,
                107,
                66,
                229,
                18,
                27,
                196,
                148,
                57,
                175,
                230,
                242,
                162,
                74,
                87,
                218,
                215,
                226,
                130,
                249,
                38,
                165,
                31,
                226,
                238,
                225,
              ],
            },
          },
          {
            "2": {
              "digestID": 2,
              "elementIdentifier": "birth_place",
              "elementValue": "Rome",
              "random": Uint8Array [
                236,
                140,
                177,
                43,
                147,
                66,
                30,
                185,
                209,
                80,
                169,
                35,
                135,
                151,
                214,
                93,
                208,
                178,
                253,
                212,
                208,
                157,
                14,
                104,
                240,
                74,
                46,
                109,
                32,
                236,
                21,
                68,
              ],
            },
          },
          {
            "3": {
              "digestID": 3,
              "elementIdentifier": "birth_country",
              "elementValue": "IT",
              "random": Uint8Array [
                115,
                223,
                52,
                0,
                52,
                53,
                117,
                248,
                32,
                99,
                68,
                129,
                160,
                13,
                157,
                14,
                189,
                176,
                164,
                140,
                139,
                98,
                185,
                119,
                138,
                255,
                139,
                107,
                136,
                247,
                61,
                213,
              ],
            },
          },
          {
            "4": {
              "digestID": 4,
              "elementIdentifier": "family_name",
              "elementValue": "Raffaello",
              "random": Uint8Array [
                237,
                136,
                134,
                29,
                221,
                129,
                31,
                143,
                17,
                11,
                35,
                185,
                72,
                79,
                106,
                101,
                233,
                15,
                191,
                209,
                25,
                196,
                250,
                180,
                77,
                24,
                238,
                222,
                184,
                40,
                128,
                88,
              ],
            },
          },
        ],
        "eu.europa.ec.eudiw.pid.it.1": [
          {
            "5": {
              "digestID": 5,
              "elementIdentifier": "tax_id_code",
              "elementValue": "TINIT-XXXXXXXXXXXXXXX",
              "random": Uint8Array [
                68,
                208,
                156,
                109,
                210,
                20,
                54,
                213,
                18,
                231,
                232,
                102,
                122,
                238,
                211,
                4,
                132,
                243,
                211,
                60,
                223,
                65,
                75,
                190,
                247,
                142,
                189,
                189,
                156,
                37,
                109,
                92,
              ],
            },
          },
        ],
      },
    },
    "raw": {
      "docType": "eu.europa.ec.eudiw.pid.1",
      "issuerSigned": {
        "issuerAuth": [
          Uint8Array [
            163,
            1,
            38,
            4,
            72,
            100,
            101,
            109,
            111,
            45,
            107,
            105,
            100,
            24,
            33,
            89,
            2,
            14,
            48,
            130,
            2,
            10,
            48,
            130,
            1,
            175,
            160,
            3,
            2,
            1,
            2,
            2,
            20,
            96,
            250,
            51,
            172,
            187,
            223,
            236,
            252,
            193,
            112,
            249,
            191,
            39,
            42,
            135,
            172,
            221,
            156,
            220,
            114,
            48,
            10,
            6,
            8,
            42,
            134,
            72,
            206,
            61,
            4,
            3,
            2,
            48,
            100,
            49,
            11,
            48,
            9,
            6,
            3,
            85,
            4,
            6,
            19,
            2,
            85,
            83,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            8,
            12,
            10,
            67,
            97,
            108,
            105,
            102,
            111,
            114,
            110,
            105,
            97,
            49,
            22,
            48,
            20,
            6,
            3,
            85,
            4,
            7,
            12,
            13,
            83,
            97,
            110,
            32,
            70,
            114,
            97,
            110,
            99,
            105,
            115,
            99,
            111,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            10,
            12,
            10,
            77,
            121,
            32,
            67,
            111,
            109,
            112,
            97,
            110,
            121,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            3,
            12,
            10,
            109,
            121,
            115,
            105,
            116,
            101,
            46,
            99,
            111,
            109,
            48,
            30,
            23,
            13,
            50,
            51,
            48,
            56,
            50,
            52,
            49,
            51,
            48,
            56,
            53,
            52,
            90,
            23,
            13,
            50,
            51,
            48,
            57,
            48,
            51,
            49,
            51,
            48,
            56,
            53,
            52,
            90,
            48,
            100,
            49,
            11,
            48,
            9,
            6,
            3,
            85,
            4,
            6,
            19,
            2,
            85,
            83,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            8,
            12,
            10,
            67,
            97,
            108,
            105,
            102,
            111,
            114,
            110,
            105,
            97,
            49,
            22,
            48,
            20,
            6,
            3,
            85,
            4,
            7,
            12,
            13,
            83,
            97,
            110,
            32,
            70,
            114,
            97,
            110,
            99,
            105,
            115,
            99,
            111,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            10,
            12,
            10,
            77,
            121,
            32,
            67,
            111,
            109,
            112,
            97,
            110,
            121,
            49,
            19,
            48,
            17,
            6,
            3,
            85,
            4,
            3,
            12,
            10,
            109,
            121,
            115,
            105,
            116,
            101,
            46,
            99,
            111,
            109,
            48,
            89,
            48,
            19,
            6,
            7,
            42,
            134,
            72,
            206,
            61,
            2,
            1,
            6,
            8,
            42,
            134,
            72,
            206,
            61,
            3,
            1,
            7,
            3,
            66,
            0,
            4,
            201,
            133,
            59,
            101,
            204,
            183,
            46,
            88,
            237,
            248,
            116,
            49,
            7,
            129,
            19,
            195,
            153,
            55,
            167,
            246,
            101,
            29,
            55,
            218,
            144,
            180,
            188,
            216,
            20,
            136,
            60,
            115,
            33,
            87,
            4,
            75,
            243,
            96,
            54,
            88,
            249,
            103,
            93,
            149,
            134,
            18,
            29,
            127,
            79,
            187,
            193,
            196,
            111,
            163,
            212,
            3,
            218,
            214,
            166,
            91,
            6,
            42,
            13,
            187,
            163,
            63,
            48,
            61,
            48,
            59,
            6,
            3,
            85,
            29,
            17,
            4,
            52,
            48,
            50,
            134,
            48,
            104,
            116,
            116,
            112,
            115,
            58,
            47,
            47,
            99,
            114,
            101,
            100,
            101,
            110,
            116,
            105,
            97,
            108,
            45,
            105,
            115,
            115,
            117,
            101,
            114,
            46,
            111,
            105,
            100,
            99,
            45,
            102,
            101,
            100,
            101,
            114,
            97,
            116,
            105,
            111,
            110,
            46,
            111,
            110,
            108,
            105,
            110,
            101,
            48,
            10,
            6,
            8,
            42,
            134,
            72,
            206,
            61,
            4,
            3,
            2,
            3,
            73,
            0,
            48,
            70,
            2,
            33,
            0,
            166,
            210,
            226,
            139,
            114,
            125,
            153,
            196,
            247,
            105,
            190,
            83,
            7,
            9,
            99,
            50,
            166,
            122,
            246,
            11,
            183,
            9,
            62,
            57,
            213,
            225,
            23,
            13,
            20,
            76,
            221,
            119,
            2,
            33,
            0,
            163,
            163,
            60,
            209,
            54,
            26,
            198,
            19,
            253,
            133,
            157,
            245,
            200,
            61,
            235,
            140,
            84,
            194,
            177,
            35,
            173,
            21,
            131,
            110,
            166,
            199,
            227,
            186,
            80,
            120,
            28,
            188,
          ],
          {
            "33": Uint8Array [
              48,
              130,
              2,
              9,
              48,
              130,
              1,
              175,
              160,
              3,
              2,
              1,
              2,
              2,
              20,
              21,
              67,
              148,
              17,
              182,
              16,
              9,
              199,
              34,
              223,
              158,
              6,
              75,
              78,
              96,
              189,
              156,
              247,
              112,
              128,
              48,
              10,
              6,
              8,
              42,
              134,
              72,
              206,
              61,
              4,
              3,
              2,
              48,
              100,
              49,
              11,
              48,
              9,
              6,
              3,
              85,
              4,
              6,
              19,
              2,
              85,
              83,
              49,
              19,
              48,
              17,
              6,
              3,
              85,
              4,
              8,
              12,
              10,
              67,
              97,
              108,
              105,
              102,
              111,
              114,
              110,
              105,
              97,
              49,
              22,
              48,
              20,
              6,
              3,
              85,
              4,
              7,
              12,
              13,
              83,
              97,
              110,
              32,
              70,
              114,
              97,
              110,
              99,
              105,
              115,
              99,
              111,
              49,
              19,
              48,
              17,
              6,
              3,
              85,
              4,
              10,
              12,
              10,
              77,
              121,
              32,
              67,
              111,
              109,
              112,
              97,
              110,
              121,
              49,
              19,
              48,
              17,
              6,
              3,
              85,
              4,
              3,
              12,
              10,
              109,
              121,
              115,
              105,
              116,
              101,
              46,
              99,
              111,
              109,
              48,
              30,
              23,
              13,
              50,
              51,
              48,
              56,
              50,
              52,
              49,
              51,
              48,
              56,
              53,
              52,
              90,
              23,
              13,
              50,
              51,
              48,
              57,
              48,
              51,
              49,
              51,
              48,
              56,
              53,
              52,
              90,
              48,
              100,
              49,
              11,
              48,
              9,
              6,
              3,
              85,
              4,
              6,
              19,
              2,
              85,
              83,
              49,
              19,
              48,
              17,
              6,
              3,
              85,
              4,
              8,
              12,
              10,
              67,
              97,
              108,
              105,
              102,
              111,
              114,
              110,
              105,
              97,
              49,
              22,
              48,
              20,
              6,
              3,
              85,
              4,
              7,
              12,
              13,
              83,
              97,
              110,
              32,
              70,
              114,
              97,
              110,
              99,
              105,
              115,
              99,
              111,
              49,
              19,
              48,
              17,
              6,
              3,
              85,
              4,
              10,
              12,
              10,
              77,
              121,
              32,
              67,
              111,
              109,
              112,
              97,
              110,
              121,
              49,
              19,
              48,
              17,
              6,
              3,
              85,
              4,
              3,
              12,
              10,
              109,
              121,
              115,
              105,
              116,
              101,
              46,
              99,
              111,
              109,
              48,
              89,
              48,
              19,
              6,
              7,
              42,
              134,
              72,
              206,
              61,
              2,
              1,
              6,
              8,
              42,
              134,
              72,
              206,
              61,
              3,
              1,
              7,
              3,
              66,
              0,
              4,
              201,
              133,
              59,
              101,
              204,
              183,
              46,
              88,
              237,
              248,
              116,
              49,
              7,
              129,
              19,
              195,
              153,
              55,
              167,
              246,
              101,
              29,
              55,
              218,
              144,
              180,
              188,
              216,
              20,
              136,
              60,
              115,
              33,
              87,
              4,
              75,
              243,
              96,
              54,
              88,
              249,
              103,
              93,
              149,
              134,
              18,
              29,
              127,
              79,
              187,
              193,
              196,
              111,
              163,
              212,
              3,
              218,
              214,
              166,
              91,
              6,
              42,
              13,
              187,
              163,
              63,
              48,
              61,
              48,
              59,
              6,
              3,
              85,
              29,
              17,
              4,
              52,
              48,
              50,
              134,
              48,
              104,
              116,
              116,
              112,
              115,
              58,
              47,
              47,
              99,
              114,
              101,
              100,
              101,
              110,
              116,
              105,
              97,
              108,
              45,
              105,
              115,
              115,
              117,
              101,
              114,
              46,
              111,
              105,
              100,
              99,
              45,
              102,
              101,
              100,
              101,
              114,
              97,
              116,
              105,
              111,
              110,
              46,
              111,
              110,
              108,
              105,
              110,
              101,
              48,
              10,
              6,
              8,
              42,
              134,
              72,
              206,
              61,
              4,
              3,
              2,
              3,
              72,
              0,
              48,
              69,
              2,
              32,
              65,
              215,
              149,
              251,
              194,
              232,
              169,
              235,
              140,
              6,
              100,
              252,
              90,
              193,
              192,
              55,
              37,
              212,
              32,
              155,
              239,
              6,
              21,
              151,
              250,
              93,
              112,
              176,
              218,
              64,
              58,
              235,
              2,
              33,
              0,
              214,
              35,
              29,
              203,
              171,
              136,
              217,
              153,
              212,
              250,
              205,
              31,
              140,
              219,
              179,
              30,
              126,
              105,
              222,
              165,
              153,
              201,
              58,
              174,
              237,
              182,
              15,
              20,
              225,
              82,
              210,
              192,
            ],
          },
          Uint8Array [
            166,
            103,
            118,
            101,
            114,
            115,
            105,
            111,
            110,
            99,
            49,
            46,
            48,
            111,
            100,
            105,
            103,
            101,
            115,
            116,
            65,
            108,
            103,
            111,
            114,
            105,
            116,
            104,
            109,
            102,
            115,
            104,
            97,
            50,
            53,
            54,
            108,
            118,
            97,
            108,
            117,
            101,
            68,
            105,
            103,
            101,
            115,
            116,
            115,
            162,
            120,
            24,
            101,
            117,
            46,
            101,
            117,
            114,
            111,
            112,
            97,
            46,
            101,
            99,
            46,
            101,
            117,
            100,
            105,
            119,
            46,
            112,
            105,
            100,
            46,
            49,
            165,
            0,
            88,
            32,
            180,
            119,
            149,
            94,
            152,
            192,
            136,
            47,
            190,
            227,
            254,
            48,
            255,
            141,
            197,
            17,
            40,
            182,
            190,
            223,
            226,
            102,
            177,
            10,
            222,
            8,
            228,
            249,
            177,
            195,
            26,
            57,
            1,
            88,
            32,
            151,
            39,
            59,
            229,
            251,
            170,
            26,
            34,
            177,
            128,
            151,
            123,
            205,
            58,
            178,
            193,
            174,
            210,
            68,
            93,
            200,
            201,
            237,
            185,
            28,
            245,
            87,
            205,
            126,
            33,
            63,
            21,
            2,
            88,
            32,
            104,
            160,
            106,
            116,
            223,
            24,
            151,
            101,
            196,
            46,
            131,
            137,
            53,
            44,
            57,
            94,
            161,
            46,
            57,
            21,
            116,
            114,
            6,
            231,
            182,
            175,
            175,
            129,
            37,
            160,
            4,
            49,
            3,
            88,
            32,
            57,
            162,
            80,
            15,
            31,
            94,
            57,
            151,
            41,
            133,
            146,
            158,
            209,
            124,
            193,
            25,
            109,
            53,
            137,
            74,
            217,
            50,
            0,
            239,
            19,
            112,
            71,
            40,
            88,
            9,
            207,
            19,
            4,
            88,
            32,
            94,
            79,
            235,
            253,
            156,
            125,
            108,
            53,
            145,
            108,
            101,
            72,
            211,
            129,
            192,
            238,
            55,
            171,
            253,
            165,
            18,
            142,
            62,
            8,
            194,
            20,
            103,
            55,
            155,
            109,
            139,
            68,
            120,
            27,
            101,
            117,
            46,
            101,
            117,
            114,
            111,
            112,
            97,
            46,
            101,
            99,
            46,
            101,
            117,
            100,
            105,
            119,
            46,
            112,
            105,
            100,
            46,
            105,
            116,
            46,
            49,
            161,
            5,
            88,
            32,
            112,
            150,
            244,
            49,
            25,
            84,
            200,
            60,
            164,
            214,
            49,
            115,
            67,
            68,
            254,
            176,
            19,
            13,
            243,
            172,
            37,
            70,
            199,
            8,
            145,
            187,
            239,
            151,
            212,
            227,
            140,
            110,
            109,
            100,
            101,
            118,
            105,
            99,
            101,
            75,
            101,
            121,
            73,
            110,
            102,
            111,
            161,
            105,
            100,
            101,
            118,
            105,
            99,
            101,
            75,
            101,
            121,
            246,
            103,
            100,
            111,
            99,
            84,
            121,
            112,
            101,
            120,
            24,
            101,
            117,
            46,
            101,
            117,
            114,
            111,
            112,
            97,
            46,
            101,
            99,
            46,
            101,
            117,
            100,
            105,
            119,
            46,
            112,
            105,
            100,
            46,
            49,
            108,
            118,
            97,
            108,
            105,
            100,
            105,
            116,
            121,
            73,
            110,
            102,
            111,
            163,
            102,
            115,
            105,
            103,
            110,
            101,
            100,
            86,
            192,
            116,
            50,
            48,
            50,
            51,
            45,
            48,
            56,
            45,
            50,
            52,
            84,
            49,
            51,
            58,
            48,
            56,
            58,
            53,
            52,
            90,
            105,
            118,
            97,
            108,
            105,
            100,
            70,
            114,
            111,
            109,
            86,
            192,
            116,
            50,
            48,
            50,
            51,
            45,
            48,
            56,
            45,
            50,
            52,
            84,
            49,
            51,
            58,
            48,
            56,
            58,
            53,
            52,
            90,
            106,
            118,
            97,
            108,
            105,
            100,
            85,
            110,
            116,
            105,
            108,
            86,
            192,
            116,
            50,
            48,
            50,
            56,
            45,
            48,
            56,
            45,
            50,
            50,
            84,
            49,
            51,
            58,
            48,
            56,
            58,
            53,
            52,
            90,
          ],
          Uint8Array [
            90,
            229,
            13,
            253,
            51,
            120,
            21,
            114,
            9,
            212,
            7,
            167,
            26,
            89,
            105,
            236,
            152,
            147,
            94,
            33,
            219,
            175,
            47,
            111,
            0,
            238,
            233,
            50,
            102,
            236,
            207,
            240,
            30,
            78,
            173,
            161,
            17,
            155,
            30,
            66,
            91,
            140,
            245,
            164,
            214,
            11,
            221,
            22,
            142,
            68,
            35,
            93,
            216,
            19,
            227,
            160,
            120,
            181,
            101,
            216,
            122,
            79,
            124,
            255,
          ],
        ],
        "nameSpaces": {
          "eu.europa.ec.eudiw.pid.1": [
            {
              "0": {
                "digestID": 0,
                "elementIdentifier": "birth_date",
                "elementValue": 1922-03-13T00:00:00.000Z,
                "random": {
                  "data": [
                    193,
                    157,
                    192,
                    252,
                    171,
                    44,
                    7,
                    177,
                    180,
                    149,
                    34,
                    109,
                    46,
                    173,
                    46,
                    35,
                    154,
                    236,
                    168,
                    115,
                    156,
                    10,
                    108,
                    84,
                    115,
                    221,
                    87,
                    59,
                    69,
                    25,
                    85,
                    97,
                  ],
                  "type": "Buffer",
                },
              },
            },
            {
              "1": {
                "digestID": 1,
                "elementIdentifier": "given_name",
                "elementValue": "Mascetti",
                "random": Uint8Array [
                  179,
                  49,
                  122,
                  21,
                  192,
                  247,
                  196,
                  107,
                  66,
                  229,
                  18,
                  27,
                  196,
                  148,
                  57,
                  175,
                  230,
                  242,
                  162,
                  74,
                  87,
                  218,
                  215,
                  226,
                  130,
                  249,
                  38,
                  165,
                  31,
                  226,
                  238,
                  225,
                ],
              },
            },
            {
              "2": {
                "digestID": 2,
                "elementIdentifier": "birth_place",
                "elementValue": "Rome",
                "random": Uint8Array [
                  236,
                  140,
                  177,
                  43,
                  147,
                  66,
                  30,
                  185,
                  209,
                  80,
                  169,
                  35,
                  135,
                  151,
                  214,
                  93,
                  208,
                  178,
                  253,
                  212,
                  208,
                  157,
                  14,
                  104,
                  240,
                  74,
                  46,
                  109,
                  32,
                  236,
                  21,
                  68,
                ],
              },
            },
            {
              "3": {
                "digestID": 3,
                "elementIdentifier": "birth_country",
                "elementValue": "IT",
                "random": Uint8Array [
                  115,
                  223,
                  52,
                  0,
                  52,
                  53,
                  117,
                  248,
                  32,
                  99,
                  68,
                  129,
                  160,
                  13,
                  157,
                  14,
                  189,
                  176,
                  164,
                  140,
                  139,
                  98,
                  185,
                  119,
                  138,
                  255,
                  139,
                  107,
                  136,
                  247,
                  61,
                  213,
                ],
              },
            },
            {
              "4": {
                "digestID": 4,
                "elementIdentifier": "family_name",
                "elementValue": "Raffaello",
                "random": Uint8Array [
                  237,
                  136,
                  134,
                  29,
                  221,
                  129,
                  31,
                  143,
                  17,
                  11,
                  35,
                  185,
                  72,
                  79,
                  106,
                  101,
                  233,
                  15,
                  191,
                  209,
                  25,
                  196,
                  250,
                  180,
                  77,
                  24,
                  238,
                  222,
                  184,
                  40,
                  128,
                  88,
                ],
              },
            },
          ],
          "eu.europa.ec.eudiw.pid.it.1": [
            {
              "5": {
                "digestID": 5,
                "elementIdentifier": "tax_id_code",
                "elementValue": "TINIT-XXXXXXXXXXXXXXX",
                "random": Uint8Array [
                  68,
                  208,
                  156,
                  109,
                  210,
                  20,
                  54,
                  213,
                  18,
                  231,
                  232,
                  102,
                  122,
                  238,
                  211,
                  4,
                  132,
                  243,
                  211,
                  60,
                  223,
                  65,
                  75,
                  190,
                  247,
                  142,
                  189,
                  189,
                  156,
                  37,
                  109,
                  92,
                ],
              },
            },
          ],
        },
      },
    },
  },
]
`;
